# first-year-coding-2025

./: .gitignore  README.MD
cpp/Baimless/CM-Cheat-Baimless/: CM-Cheat-Baimless.sln
cpp/C++ masterclass/AplicacaoMinima/: CMakeLists.txt  main.cpp
cpp/C++ masterclass/ApplicacaoMinima/: ApplicacaoMinima.sln
cpp/C++ masterclass/GradeAvg/: CMakeLists.txt  GradeAvg.sln  main.cpp
cpp/C++ masterclass/Loops/: CMakeLists.txt  Loops.sln  main.cpp
cpp/C++ masterclass/Loops/Loops/: Loops.vcxproj  main.cpp
cpp/C++ masterclass/Maximum/: Maximum.sln
cpp/C++ masterclass/Saudacao/: CMakeLists.txt  main.cpp
cpp/C++ masterclass/SwitchCase/: SwitchCase.sln
cpp/C++ masterclass/Teste/: Teste.sln
cpp/C++ masterclass/testQT/: CMakeLists.txt  main.cpp
fullstack-rocketseat/1 - fundamentos-HTML/1 - primeiros-passos/: 1 - o-que-e-html.md  2 - Comentários no HTML.md  3 - anatomia das tags.html  4 - espaços-e-quebras-de-linha.html  5 - fluxo-HTML.html  6 - caracteres-reservados.html
fullstack-rocketseat/1 - fundamentos-HTML/2 - Atributos/: 1 - atributos.html  4 - class.html  5 - data.html  6 - style.html
fullstack-rocketseat/1 - fundamentos-HTML/3 - elementos-de-conteudo/: 4 - listas.html  (+2 more)
javascript/Javascript Masterclass/: ieee754_1.js  math_1.js  string.js
javascript/the-ultimate-web-scraping-course/: angi.js  package-lock.json  package.json  test.json
outros/ldp-rocketseat/: jogo_da_velha.py
python/WSCP/: .gitignore  requeriments.txt
python/codigo.py/: mundo12.py  mundo7.py
python/dominando_o_discord/: main.py
python/web_scraping_com_python/: scrapetest.py
(+346 files in other folders)
